tirage lettre joueur

--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" href="./styles/main.css"> 
         <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
         <script src="scripts/gameParameters.js"></script> 
-        <script src="scripts/boardManager.js"></script> 
+        <script src="scripts/boardManager.js"></script>
+        <script src="scripts/gameManager.js"></script>  
         <script src="scripts/main.js"></script> 
         <title>Jeux des mots</title>
     </head>
