--- a/main.html
+++ b/main.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./styles/normalize.css">
         <link rel="stylesheet" href="./styles/main.css"> 
-        <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+		<script src="scripts/jquery-3.1.1.min.js"></script>
+		<script src="scripts/jquery.ui.min.js"></script>
         <script src="scripts/gameParameters.js"></script> 
         <script src="scripts/boardManager.js"></script>
         <script src="scripts/gameManager.js"></script>  
