--- a/main.html
+++ b/main.html
@@ -8,12 +8,14 @@
         <link rel="stylesheet" href="./styles/main.css"> 
 		<script src="scripts/jquery-3.1.1.min.js"></script>
 		<script src="scripts/jquery.ui.min.js"></script>
-        <script src="scripts/gameParameters.js"></script> 
-        <script src="scripts/boardManager.js"></script>
         <script src="scripts/manyWords_FR.js"></script>
+        <script src="scripts/gameFunctions.js"></script>
         <script src="scripts/wordManager.js"></script>  
-        <script src="scripts/toolManager.js"></script> 
-        <script src="scripts/gameManager.js"></script>  
+        <script src="scripts/toolManager.js"></script>
+        <script src="scripts/gameParameters.js"></script>
+        <script src="scripts/gameManager.js"></script> 
+        <script src="scripts/boardManager.js"></script>  
+        <script src="scripts/confirmBox.js"></script> 
         <script src="scripts/main.js"></script> 
         <title>Jeux des mots</title>
     </head>
