--- a/main.html
+++ b/main.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./styles/normalize.css">
         <link rel="stylesheet" href="./styles/main.css"> 
-		<script src="scripts/jquery-3.1.1.min.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Comfortaa|Libre+Baskerville&display=swap" rel="stylesheet">
+        <script src="scripts/jquery-3.1.1.min.js"></script>
 		<script src="scripts/jquery.ui.min.js"></script>
         <script src="scripts/manyWords_FR.js"></script>
         <script src="scripts/gameFunctions.js"></script>
